* Removed variable m_workingPool in class Genotype
* Introduced generation number in class Configuration.
  It is incremented automatically in Genotype.evolve()
* Added javadocs for salesman related classes
* Simplified tests for WeightedRouletteSelector
* Added tests for Configuration exposing a previous bug
* Added tests to validate equals() methods better
* Fixed an error in GaussianRandomGenerator
* Removed org.jgap.impl.ReproductionOperator, it's not needed!
* Added org.jgap.impl.BulkFitnessOffsetRemover (see request
  1084383)


2.1
----------
* Extended JGAP documentation heavily (also see JGAP homepage at
  http://jgap.sourceforge.net)
* Fixed a severe bugb in GaussianMutationOperator
* Added new Mutation Operator: SwappingMutationOperator
* Added methods setPreserveFittestIndividual(..) and 
  isPreserveFittestIndividual() to class Configuration
  and added support of it to Genotype.evolve().
  Also see request 1088476.
* Modified hashcode function in class Chromosome to be as
  in java.util.AbstractList
* Made GaussianMutationOperator work with CompositeGene
* Made AveragingCrossoverOperator work with CompositeGene
* Made CrossoverOperator work with CompositeGene
* Fixed an error in TournamentSelector with tournament size = 1
* Added constraint checks in constructor of class TournamentSelector
* Added utility class for general testing of hashcode function
* Added tests for hashcode function in class Chromosome
* Added tests for ThresholdSelector (see request 1083587)
* Added tests for TournamentSelector (see request 1083509)
* Added tests for FittesPopulationMerger (see request 1084425)
* Added tests for PopulationHistory (see request 1075163)
* Added tests for GaussianMutationOperator (see request 1072059)
* Added tests for SwappingMutationOperator (see request 1093233)
* Added tests for AveragingCrossoverOperator (see request 1083644)
* Added tests for GreedyCrossover (see request 1093231)
* Fixed javadocs of several classes